tests/ui/type/type-check/cannot_infer_local_or_vec_in_tuples.rs
fn main() {
    let (x, ) = (vec![], );
    //~^ ERROR type annotations needed
}

// ferrocene-annotations: fls_k64tfywtn0g8
// Tuple Expressions
// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
// ferrocene-annotations: fls_urbr5rg9206v
// Tuple Patterns
// ferrocene-annotations: fls_lv7w7aalpwm5
// Type Inference
